# sbwtools

./: .clangd  LICENSE
data/: mini.bwt  mini.bwtb  mini.concat  mini.fna  mini.lcp  mini.lcpt
example/: list.txt  mini.fna
generator/: Makefile  main.c
transform/: Cargo.toml
transform/src/: main.rs  make.rs
