[package]
name = "transform"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.11" }
log = { version = "0.4.33" }
jseqio = { version = "0.1.7" }
simple-sds-sbwt = { version = "0.3.3" }
clap = { version = "4.6.1", features = ["derive"] }
sbwt = { path = "../../../sbwt-rs-cli/api" }
